- adding firebase hosting - restructuring

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "kks",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://bsage88.github.io/kks",
+  "homepage": ".",
   "dependencies": {
+    "firebase": "^5.4.1",
     "lodash": "^4.17.10",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -13,11 +14,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "eject": "react-scripts eject"
   }
 }
