--- a/package.json
+++ b/package.json
@@ -4,21 +4,16 @@
     "private": true,
     "homepage": ".",
     "dependencies": {
-        "firebase": "^8",
-        "less-watch-compiler": "^1.16.3",
+        "firebase": "^12",
         "lodash": "^4.17.21",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-router-dom": "^5.3.0",
-        "react-scripts": "^5"
+        "react": "^19",
+        "react-dom": "^19",
+        "react-router-dom": "^7"
     },
     "scripts": {
-        "build-css": "less-watch-compiler --run-once dist/ public/css/",
-        "watch-css": "less-watch-compiler dist/ public/css/",
-        "start": "start npm run watch-css && react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
     "browserslist": {
         "production": [
@@ -31,5 +26,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^5.1.0",
+        "vite": "^7.1.12"
     }
 }
